@@ -12,8 +12,6 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="main">
-<h3>Single View for VideoList</h3>
-
-<f:flashMessages />
-<f:render partial="VideoList/Properties" arguments="{videoList:videoList}" />
+  <f:flashMessages />
+  <f:render partial="VideoList/Properties" arguments="{videoList:videoList}" />
 </f:section>
