@@ -6,6 +6,8 @@
 	* Added new template files for the new actions
 	* Code cleanup: deleted unused actions and template files
 	* Rearranged the single video templates for a better output
+	* Rearranged the video lists template for putting out the list data and the
+	  associated videos
 
 2015-12-03 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0
 
